cambio de prueba

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>increíble coso el que estamos haciendo aquí</title>
+    <title>comprobando cosas bastante cremas</title>
 </head>
 <body>
     <article>hola que tal como está la gente</article>
