--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>comprobando cosas bastante cremas</title>
+    <title>hola mamá</title>
 </head>
 <body>
-    <article>hola que tal como está la gente</article>
+    <article>que tal estas
+    
+    </article>
 </body>
 </html>
